[gd_scene load_steps=3 format=3 uid="uid://bluldnvxtyocv"]

[ext_resource type="Script" path="res://PauseMenu.gd" id="1_pause"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8p3r"]
bg_color = Color(0.121569, 0.121569, 0.121569, 0.784314)

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1_pause")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w8p3r")

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PAUSE"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resume Game"

[node name="SettingsButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="MenuButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Main Menu"

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
